<resources>
    <string name="app_name">PartyCast</string>
    <string name="lobby">Lobby</string>
    <string name="queue">Queue</string>
    <string name="settings">Settings</string>
    <string name="library">Library</string>
    <string name="create_lobby">Create lobby</string>
    <string name="connect_manually">Connect by address</string>
    <string name="scan_nearby_devices">Scan local network</string>
</resources>