<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="sk.martin64.partycast.ui.main.HomeFragment"
        android:label="@string/lobby"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_queue"
        android:name="sk.martin64.partycast.ui.main.QueueFragment"
        android:label="@string/queue"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="sk.martin64.partycast.ui.main.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="sk.martin64.partycast.ui.main.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_home" />
</navigation>